# Dementia-Detection

./: .gitattributes  .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  push_to_spaces.yml
data/: sample-mri.npy  sample-pet.npy
demo/: demo_streamlit.py
frontend/: analyze.html  index.html
model/: memento.h5  mri-3d.h5  pet-3d.h5  pet.h5
src/app/: main.py
